# project

./: .gitattributes  .gitignore  CHECKLIST.md  Cargo.toml  OPTIMIZATION_SUMMARY.md  README.md
.github/workflows/: ci.yml  release.yml
src/: analyzer.rs  app.rs  collector.rs  gpu.rs  logger.rs  main.rs  models.rs  ui.rs
