[package]
name = "process_monitor"
version = "0.1.10"
edition = "2021"

[dependencies]
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
wgpu = "0.20"
nvml-wrapper = { version = "0.11.0", optional = true }

[features]
# Keep the base app fully cross-platform with zero OS/vendor-specific requirements.
default = []

# Enable NVIDIA GPU metrics on Windows/Linux when NVML is available (NVIDIA drivers installed).
nvidia-nvml = ["dep:nvml-wrapper"]

[target.'cfg(windows)'.dependencies]
wmi = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
